--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "graphql": "^16.8.1",
     "next": "15.3.2",
     "payload": "3.47.0",
-    "react": "19.1.0",
-    "sharp": "0.34.2"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sharp": "0.34.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@playwright/test": "1.50.0",
@@ -38,12 +40,15 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react": "4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
     "jsdom": "26.1.0",
     "playwright": "1.50.0",
     "playwright-core": "1.50.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
+    "tailwindcss": "^4.1.11",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
