--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@payloadcms/payload-cloud": "3.47.0",
     "@payloadcms/richtext-lexical": "3.47.0",
     "@payloadcms/ui": "3.47.0",
+    "@svgr/webpack": "^8.1.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
