--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@payloadcms/next": "3.47.0",
     "@payloadcms/payload-cloud": "3.47.0",
     "@payloadcms/richtext-lexical": "3.47.0",
+    "@payloadcms/richtext-slate": "^3.48.0",
     "@payloadcms/ui": "3.47.0",
     "@svgr/webpack": "^8.1.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
+    "embla-carousel-react": "^8.6.0",
     "graphql": "^16.8.1",
     "next": "15.3.2",
     "payload": "3.47.0",
