add modal contact us

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "payload": "3.47.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
     "sharp": "0.34.2"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
