--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@playwright/test": "1.50.0",
     "@testing-library/react": "16.3.0",
+    "@types/escape-html": "^1.0.4",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
