--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "dotenv": "16.4.7",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.8.1",
-    "next": "15.3.2",
+    "next": "^15.4.6",
     "payload": "3.47.0",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.3",
