add bucket for image, fix modal close btn

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+
+NEXT_PUBLIC_SERVER_URL=
+NEXT_PUBLIC_ADMIN_URL=
+# Added by Payload
+
+S3_BUCKET=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_REGION=
+S3_ENDPOINT=
