--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "sharp": "0.34.2"
   },
   "devDependencies": {
-    "@playwright/test": "1.50.0",
+    "@playwright/test": "^1.54.2",
     "@testing-library/react": "16.3.0",
     "@types/escape-html": "^1.0.4",
     "@types/node": "^22.5.4",
