--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "vitest": "3.2.3"
   },
   "engines": {
-    "node": "18.20.2",
+    "node": "22.x",
     "pnpm": "^9 || ^10"
   },
   "pnpm": {
